feat: add actionInsertIndex for trigger/land play event ordering in StaxReplayWriter
Add onBeginTriggeredAbility and onBeginLandPlay callbacks to save insert
position before activate/moveCards runs. This ensures trigger and land play
events appear before any reveals from applyEffects called during activation.

Also convert pendingEvents from ArrayDeque to ArrayList to support indexed
insertion.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>